--- a/Website/Graph.css
+++ b/Website/Graph.css
@@ -6,6 +6,16 @@ h1 {
     font-weight: 800;
   }
 
+h3 {
+    margin-top: 20px;
+    text-align: center;
+    margin-left: 150px;
+    margin-right: 150px;
+    margin-bottom: 20px;
+    font-family: 'Lato', sans-serif;
+    color: #000000;
+}
+
 p {
     margin-top: 20px;
     margin-left: 150px;
@@ -16,16 +26,23 @@ p {
     font-family: 'Lato', sans-serif;
   }
 
-  body {
-    background-color: var(--dl-color-gray-white100);
-  }
+.list-container {
+        text-align: center;
+}
 
-  py-script {
-    margin-top: 20px;
-    margin-left: 150px;
-    margin-right: 150px;
-    margin-bottom: 20px;
-    overflow-y: auto;
-    text-align: center;
-    font-family: 'Lato', sans-serif;
-  }
+.list-container ul {
+  display: inline-block;
+  text-align: left;
+}
+
+body {
+  background-color: var(--dl-color-gray-white100);
+}
+
+py-script {
+  display: block;
+  margin-top: 20px;
+  overflow-y: auto;
+  text-align: center;
+  font-family: 'Lato', sans-serif;
+}
