--- a/Website/Graph.css
+++ b/Website/Graph.css
@@ -6,16 +6,6 @@ h1 {
     font-weight: 800;
   }
 
-h3 {
-    margin-top: 20px;
-    text-align: center;
-    margin-left: 150px;
-    margin-right: 150px;
-    margin-bottom: 20px;
-    font-family: 'Lato', sans-serif;
-    color: #000000;
-}
-
 p {
     margin-top: 20px;
     margin-left: 150px;
@@ -27,12 +17,22 @@ p {
   }
 
 .list-container {
-        text-align: center;
+    text-align: center;
 }
 
 .list-container ul {
   display: inline-block;
   text-align: left;
+  font-family: 'Lato', sans-serif;
+  color: #000000;
+}
+
+.list-container h5 {
+    margin-top: 40px;
+    margin-bottom: 10px;
+    text-align: left;
+    font-family: 'Lato', sans-serif;
+    color: #000000;
 }
 
 body {
